--- a/package.json
+++ b/package.json
@@ -4,13 +4,27 @@
   "private": true,
   "dependencies": {
     "@mapbox/mapbox-gl-draw": "^1.3.0",
+    "@nifty10m/mapbox-gl-draw-mode-collection": "^1.0.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@turf/area": "^6.5.0",
+    "@turf/turf": "^6.5.0",
+    "lineclip": "^1.1.5",
     "mapbox-gl": "^2.3.1",
+    "mapbox-gl-draw-circle": "^1.1.2",
+    "mapbox-gl-draw-cut-polygon-mode": "^1.0.1",
+    "mapbox-gl-draw-passing-mode": "^0.1.0",
+    "mapbox-gl-draw-split-polygon-mode": "^1.0.1",
+    "polybooljs": "^1.2.0",
+    "polygon-clipping": "^0.15.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
+    "react-bootstrap-icons": "^1.5.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-tooltip": "^4.2.21",
+    "string-array": "^1.0.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
